Added flake8 test to travis and cleaned up code to comply with pep8.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ install:
   - pip install -r requirements.txt
   - pip install -r requirements-dev.txt
   - pip install coveralls
+  - pip install flake8
+
+before_script:
+  - flake8 --ignore=E501,F401 --exclude=docs/ .
 
 script:
   - py.test --cov=. --cov-config .coveragerc .
