--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - pip install -r requirements-dev.txt
   - pip install coveralls
   - pip install flake8
+  - pip install -e .
 
 before_script:
   - flake8 --ignore=E501,F401 --exclude=docs/ .
