--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ install:
   - pip install -e .
 
 before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
   - flake8 --ignore=E501,F401 --exclude=docs/ .
 
 script:
